<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/heading1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reservation"
                android:textSize="9pt"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="text" />

            <EditText
                android:id="@+id/editTextPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/phone_no"
                android:inputType="number" />

            <EditText
                android:id="@+id/editTextPax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/no_of_pax"
                android:inputType="number" />

            <TextView
                android:id="@+id/heading2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reservation_details"
                android:textSize="7pt" />

            <DatePicker
                android:id="@+id/datePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                />

            <TimePicker
                android:id="@+id/timePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:timePickerMode="spinner" />

            <TextView
                android:id="@+id/heading3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/type"
                android:textSize="7pt"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <RadioButton
                        android:id="@+id/radioSmoking"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/smoking"
                        />

                    <RadioButton
                        android:id="@+id/radioNoSmoking"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/not_smoking"
                        />

                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonReset"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#70B9B1"
                    android:text="@string/reset" />

                <Button
                    android:id="@+id/buttonConfirm"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#70B9B1"
                    android:text="@string/confirm"
                    />
            </LinearLayout>

            <TextView
                android:id="@+id/textViewDisplay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="" />

            <TextView
                android:id="@+id/textViewError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#FF0000"
                android:text="" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
